# powergrid-reimagined

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.lobby  README.md  TODO.md  bots.sh  docker-compose.yml  run.sh
.github/workflows/: release.yml
crates/map-tool/: Cargo.toml
crates/map-tool/src/: main.rs
crates/powergrid-bot/: Cargo.toml
crates/powergrid-bot/src/: lib.rs  main.rs  runtime.rs  strategy.rs
crates/powergrid-client/: Cargo.toml
crates/powergrid-client/src/: app.rs  auth.rs  card_painter.rs  connection.rs  local.rs  main.rs  map_panel.rs  screens.rs  state.rs  theme.rs  ui.rs  ws.rs
crates/powergrid-client/src/ui/: action_panel.rs  connect.rs  helpers.rs  left_panel.rs  lobby.rs  local_setup.rs  main_menu.rs  mod.rs  phase_tracker.rs  right_panel.rs  room_browser.rs  top_panel.rs
crates/powergrid-core/: Cargo.toml
crates/powergrid-core/src/: actions.rs  lib.rs  map.rs  rules.rs  state.rs  types.rs
crates/powergrid-lobby/: Cargo.toml
crates/powergrid-lobby/src/: driver.rs  lobby_handler.rs  main.rs  room_handler.rs  rooms.rs  ws.rs
crates/powergrid-reimagined/src/: assets.rs
crates/powergrid-server/: Cargo.toml
crates/powergrid-server/maps/: germany.toml
crates/powergrid-server/src/: lib.rs  main.rs  ws.rs
