[package]
name = "powergrid-lobby"
version = "0.1.0"
edition = "2021"

[dependencies]
powergrid-core = { path = "../powergrid-core" }
powergrid-bot = { path = "../powergrid-bot" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
uuid = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }
